[tool.poetry]
name = "repl_python3_bots-crosses"
version = "0.1.0"
description = ""
authors = ["kineticcat <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
